[package]
# Distribution information.
name = "abpfiff"
version = "0.1.0"
description = "Interaction with Linux BPF(2). No libbpf-sys."

license = "EUPL-1.2"
readme = "Readme.md"
authors = ["Andreas Molzer"]
categories = ["network-programming", "os::linux-apis", "no-std"]
repository = "https://github.com/HeroicKatora/abpfiff"

# Packet configuration
edition = "2021"
rust-version = "1.65.0"
exclude = [
	# Partly due to license
	"bpf-examples"
]

# FIXME: there's got to be a more minimal syscall library. Also: maybe we can
# let the caller provide a v-table of functions to use for the system
# interface, instead?
[dependencies.libc]
version = "0.2.108"
default-features = false

# Doing 'network IO', for reading buffers and libc default init.
[dependencies.bytemuck]
version = "1.7"
default-features = false
